# garlic-butter

./: .gitignore  .gitpod.yml  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
butter/: __main__.py  cli.py  cli_utils.py  game.py  game_art.py  gameart.py  gamelist.py  global.yaml  utils.py
tests/: __init__.py  test_game.py  test_gameart.py  test_gamelist.py
